# drf-keycloak-example

./: .dockerignore  .env.sample  .flake8  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  deploy.sh
backend/config/: asgi.py  oidc.py  settings.py  urls.py  wsgi.py
backend/quickstart/: urls.py
