[tool.poetry]
name = "drf-keycloak-example"
version = "0.1.0"
description = "Example of how DRF (Django REST framework) and keycloak work together"
authors = ["koki.muguruma"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.2"
mozilla-django-oidc = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .git
    | .venv
    | __pycache__
)
'''

[tool.isort]
profile = "black"
line_length = 119
